Add global close button

--- a/front/src/locales/ar.json
+++ b/front/src/locales/ar.json
@@ -819,9 +819,7 @@
             "message": "حدث خطأ مجهول"
           }
         },
-        "button": {
-          "close": "إغلاق"
-        },
+        "button": {},
         "table": {
           "error": {
             "debug": "معلومات عن المَقطَع",
@@ -1081,7 +1079,6 @@
         },
         "button": {
           "cancel": "إلغاء",
-          "close": "إغلاق",
           "finishLater": "إكتمل",
           "next": "المَقطَع التالي",
           "previous": "المَقطَع السابق",
@@ -1992,7 +1989,6 @@
         },
         "InstancePolicyModal": {
           "button": {
-            "close": "إغلاق",
             "show": "تحديث قاعدة الإشراف"
           },
           "modal": {
@@ -2254,7 +2250,6 @@
           }
         },
         "button": {
-          "close": "إغلاق",
           "reload": "إغلاق وإعادة إنعاش الصفحة"
         },
         "header": {
@@ -2290,9 +2285,7 @@
           "show": "عرض اختصارات لوحة المفاتيح المتوفّرة"
         }
       },
-      "button": {
-        "close": "إغلاق"
-      },
+      "button": {},
       "header": {
         "modal": "اختصارات لوحة المفاتيح"
       }
@@ -2316,7 +2309,6 @@
     "Queue": {
       "button": {
         "clear": "امسح",
-        "close": "إغلاق",
         "stopRadio": "إيقاف الإذاعة"
       },
       "label": {
@@ -3814,6 +3806,11 @@
       "actions": {
         "update": "تحديث"
       }
+    }
+  },
+  "global": {
+    "button": {
+      "close": "إغلاق"
     }
   }
 }
