--- a/front/src/locales/ru.json
+++ b/front/src/locales/ru.json
@@ -1010,9 +1010,7 @@
             "message": "Метаданные файла неправильные или некоторые обязательные поля отсутствуют."
           }
         },
-        "button": {
-          "close": "Закрыть"
-        },
+        "button": {},
         "table": {
           "error": {
             "debug": "Диагностика",
@@ -1312,7 +1310,6 @@
         },
         "button": {
           "cancel": "Отмена",
-          "close": "Закрыть",
           "finishLater": "Закончить позже",
           "next": "Следующий шаг",
           "previous": "Предыдущий шаг",
@@ -2369,7 +2366,6 @@
         },
         "InstancePolicyModal": {
           "button": {
-            "close": "Закрыть",
             "show": "Правила модерации…"
           },
           "modal": {
@@ -2678,7 +2674,6 @@
           }
         },
         "button": {
-          "close": "Закрыть",
           "reload": "Закрыть и обновить страницу"
         },
         "header": {
@@ -2730,9 +2725,7 @@
           "unfocus": "Выйти из панели поиска"
         }
       },
-      "button": {
-        "close": "Закрыть"
-      },
+      "button": {},
       "header": {
         "modal": "Горячие клавиши"
       }
@@ -2762,7 +2755,6 @@
     "Queue": {
       "button": {
         "clear": "Очистить",
-        "close": "Закрыть",
         "stopRadio": "Остановить радио"
       },
       "label": {
@@ -4501,6 +4493,11 @@
     "axios": {
       "rateLimitDelay": "Вы отправили слишком много запросов и попали под временное ограничение, пожалуйста, попробуйте снова через { delay }",
       "rateLimitLater": "Вы отправили слишком много запросов и попали под ограничение, пожалуйста, попробуйте позже"
+    }
+  },
+  "global": {
+    "button": {
+      "close": "Закрыть"
     }
   }
 }
