--- a/front/src/locales/kab_DZ.json
+++ b/front/src/locales/kab_DZ.json
@@ -258,9 +258,7 @@
             "label": "Yir iɣf-isefka"
           }
         },
-        "button": {
-          "close": "Mdel"
-        }
+        "button": {}
       },
       "EditCard": {
         "button": {
@@ -915,9 +913,7 @@
           }
         },
         "InstancePolicyModal": {
-          "button": {
-            "close": "Mdel"
-          }
+          "button": {}
         },
         "NotesThread": {
           "button": {
@@ -1323,7 +1319,6 @@
       "UploadModal": {
         "button": {
           "cancel": "Sefex",
-          "close": "Mdel",
           "publish": "Suffeɣ-d",
           "update": "Leqqem"
         }
@@ -1398,8 +1393,7 @@
     },
     "Queue": {
       "button": {
-        "clear": "Effacer",
-        "close": "Mdel"
+        "clear": "Effacer"
       },
       "label": {
         "duration": "Durée",
@@ -1413,9 +1407,7 @@
     },
     "federation": {
       "FetchButton": {
-        "button": {
-          "close": "Mdel"
-        },
+        "button": {},
         "table": {
           "error": {
             "value": {
@@ -1431,9 +1423,7 @@
       }
     },
     "ShortcutsModal": {
-      "button": {
-        "close": "Mdel"
-      },
+      "button": {},
       "header": {
         "modal": "Inegzumen n unasiw"
       }
@@ -2360,6 +2350,11 @@
         "later": "Ticki",
         "update": "Leqqem"
       }
+    }
+  },
+  "global": {
+    "button": {
+      "close": "Mdel"
     }
   }
 }
